2022-06-25  Alex Kotov  <kotovalexarian@gmail.com>

	* configure.ac: Removed package "io"
	* include/kernaux/generic/file.h: Added
	* include/kernaux/io.h: Removed
	* include/kernaux/printf.h: Use new file API

2022-06-24  Alex Kotov  <kotovalexarian@gmail.com>

	* configure.ac: Added packages "arch-*" and "asm"

2022-06-23  Alex Kotov  <kotovalexarian@gmail.com>

	* configure.ac: Added package "drivers"

2022-06-22  Alex Kotov  <kotovalexarian@gmail.com>

	* include/kernaux/free_list.h: Finished

2022-06-21  Alex Kotov  <kotovalexarian@gmail.com>

	* include/kernaux/generic/malloc.h: Added

2022-06-20  Alex Kotov  <kotovalexarian@gmail.com>

	* include/kernaux/generic/mutex.h: Mutex moved here
	* include/kernaux/macro.h: Definitions "KERNAUX_ACCESS_*" made stable
	* include/kernaux/macro.h: Macro "KERNAUX_PROTECTED_FIELD" added

2022-06-18  Alex Kotov  <kotovalexarian@gmail.com>

	* include/kernaux/mutex.h: Added

2022-06-17  Alex Kotov  <kotovalexarian@gmail.com>

	* configure.ac: Added package "free-list"
	* include/kernaux/free_list.h: Added

2022-06-16  Alex Kotov  <kotovalexarian@gmail.com>

	libkernaux 0.4.0 released