@@ -33,7 +33,8 @@ libkernaux_la_SOURCES = \
 	src/libc.h \
 	src/generic/file.c \
 	src/generic/malloc.c \
-	src/generic/mutex.c
+	src/generic/mutex.c \
+	src/memory_file.c
 
 ########
 # libc #
