@@ -47,6 +47,7 @@ zero). Work-in-progress APIs can change at any time.
   * Architecture-specific code (*work in progress*)
     * [Declarations](/include/kernaux/arch/)
     * [Functions](/include/kernaux/asm/)
+  * [Memory file](/include/kernaux/memory_file.h) (*non-breaking since* **?.?.?**)
 * Generic types
   * [File](/include/kernaux/generic/file.h) (*non-breaking since* **?.?.?**)
     * [Example](/examples/generic_file.c)
