@@ -1,3 +1,7 @@
+2022-06-27  Alex Kotov  <kotovalexarian@gmail.com>
+
+	* include/kernaux/memory_file.h: Added
+
 2022-06-25  Alex Kotov  <kotovalexarian@gmail.com>
 
 	* configure.ac: Removed package "io"
